rnsc/test_data/rns_integration/error/parser/outside_class_directive/after_class_dir/annotation_keyword.rns
.class public EmptyClass
.super java/lang/Object

.class_end
; some comment
; another comment
annotation
